# rusty-new

./: Cargo.toml  LICENSE  README.MD
src/: color.rs  config.rs  main.rs
src/input/: mod.rs  web.rs
src/kinds/: embedded.rs  mod.rs  webapp.rs
