[package]
name = "create-rust-app"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
fs_extra = "1.3.0"
inquire = "0.7.5"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["strum_macros"] }
strum_macros = "0.27.1"
